fix: scrolbar visibile

--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,16 @@ body {
   color: var(--text-main);
 }
 
+/* Скрытие скроллбара */
+* {
+  scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE и Edge */
+}
+
+*::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
+
 .skip-link {
   position: absolute;
   left: 12px;
